Fixed image spacing on leaderboard page

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -613,6 +613,12 @@ header {
         li {}
     }
 }
+
+.leaderBoardTop {
+    overflow: hidden;
+    width: 100%;
+}
+
 /* NEW POST VIEW
 ----------------- */
 
